fix scrollbar profile history

--- a/src/pages/Profile/ProfilePage.module.css
+++ b/src/pages/Profile/ProfilePage.module.css
@@ -254,8 +254,13 @@
   height: 533px;
   border: 3px solid #001214;
   border-radius: 9px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   background: transparent;
+}
+
+.simList::-webkit-scrollbar {
+  width: 0;
 }
 
 .simListInner {
